# ezspot

./: .gitignore  Cargo.toml  Dockerfile  README.md  config_sample.yaml  docker-compose.yaml  settings_sample.yaml
ezspot-backend/: Cargo.toml
ezspot-backend/src/: main.rs
src/: cli.rs  config.rs  lib.rs  logger.rs  main.rs  settings.rs
src/TEST/: mod.rs
src/TEST/adapter/: mod.rs  rest_prelude.rs  test_utils.rs
src/TEST/adapter/example/: mod.rs
src/TEST/app/: rest.rs
src/TEST/domain/auth/: service_impl.rs
src/TEST/domain/example/: service_impl.rs
src/TEST/domain/room/: service_impl.rs
src/TEST/infra/: rest.rs  state.rs
src/adapter/: mod.rs  rest_prelude.rs  test_utils.rs
src/adapter/auth/repo/: models_sled.rs  repo_sled.rs
src/adapter/auth/rest/: handlers.rs  middleware.rs  mod.rs
src/adapter/example/repo/: models_sled.rs  repo_sled.rs
src/adapter/example/rest/: handlers.rs  models.rs
src/adapter/health_check/rest/: handlers.rs  models.rs
src/adapter/room/repo/: mod.rs  models_sled.rs  repo_sled.rs
src/adapter/room/rest/: handlers.rs  mod.rs  models.rs  ws.rs
src/api/: context.rs  mod.rs  prelude.rs  problem.rs  response.rs  routes.rs
src/api/handlers/: auth.rs  debug.rs  health_check.rs  healthcheck.rs  mod.rs  room.rs  session.rs  ws.rs
src/api/rest/: mod.rs  prelude.rs
src/api/rest/handlers/: auth.rs  debug.rs  health_check.rs
src/api/rest/middleware/: auth.rs
src/api/rest/models/: auth.rs  debug.rs  mod.rs
src/api/rest/routes/: auth.rs  debug.rs  middleware.rs  mod.rs
src/api/rest_dep/: mod.rs
src/api/rest_dep/handlers/: debug.rs  mod.rs  ws.rs
src/api/rest_dep/routes/: debug.rs  health_check.rs  middleware.rs  mod.rs
src/app/: rest.rs
src/depr/api/rest/: prelude.rs  test_utils.rs
src/depr/api/rest_dep/: mod.rs  prelude.rs
src/depr/infra/repos/: auth.rs
src/depr/models/: auth.rs
src/depr/repos/: auth.rs  error.rs
src/depr/services/: auth.rs  local_prelude.rs  prelude.rs  room.rs  ws.rs
src/domain/: local_prelude.rs  mod.rs
src/domain/auth/: service_impl.rs
src/domain/example/: mod.rs  service_impl.rs
src/domain/room/: service_impl.rs
src/infra/: mod.rs  rest.rs  sled.rs  state.rs
src/models/: room.rs
src/port/: mod.rs
src/port/auth/repo/: mod.rs  models.rs  repo.rs
src/port/auth/service/: mod.rs  (+1 more)
src/repos/: mod.rs
src/services/: auth.rs  errors.rs  mod.rs  prelude.rs  room.rs  session.rs  ws.rs
src/tests/: auth.rs  example.rs  health_check.rs  mod.rs  room.rs  utils.rs
(+46 files in other folders)
