[package]
name = "ezspot"
version = "0.1.0"
authors = ["LazyMechanic <AsharnRus@gmail.com>"]
edition = "2018"

[lib]
name = "ezspot_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
config = "0.10"
http = "0.2"
http-serde = "1.0"
http-api-problem = { version = "0.17", features = ["with-api-error", "with-warp"] }
jsonwebtoken = "7.2"
log = { version = "0.4", features = ["std", "serde"] }
pretty_env_logger = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "0.2", features = ["rt-threaded", "macros", "time"] }
thiserror = "1.0"
futures = "0.3"
warp = "0.2"
websocket = "0.26"
uuid = { version = "0.8", features = ["serde", "v4"] }