[package]
name = "ezspot"
version = "0.1.0"
authors = ["LazyMechanic <AsharnRus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "2"
actix-service = "1"

anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
config = "0.10"
cookie = "0.15"
clap = "3.0.0-beta.2"
http = "0.2"
http-serde = "1.0"
http-api-problem = { version = "0.50", features = ["default", "api-error", "actix-web"] }
jsonwebtoken = "7.2"
log = { version = "0.4", features = ["std", "serde"] }
log4rs = "1.0"
passwords = "3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
sled = "0.34"
tokio = { version = "1", features = ["full"] }
time = "0.2"
thiserror = "1.0"
futures = "0.3"
futures-util = "0.3"
warp = "0.3"
websocket = "0.26"
uuid = { version = "0.8", features = ["serde", "v4"] }